# Pico_C_program

./: README.md  serial_recieve.c  serialrecieve_2.c
For_Com/PyCharms/: serial_trace_send.c
For_Pico/: CMakeLists.txt  Encryption.uf2  aes.h
